tests/NormalTests/paczka1/fuzzy1/53255862.err
Error in line 1: Q5Yx8Q2gz S9 62,0
Error in line 4: jwta7Sxcd S9 11,5
Error in line 5: jwta7Sxcd A665 8,6
Error in line 11: KEx S9 38,2
Error in line 2: Q5Yx8Q2gz S50 87,4
Error in line 13: KEx A24 47,7
Error in line 16: Q5Yx8Q2gz A665 47,7
Error in line 20: 5VYjsd5c S50 40,6
